<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mileId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/mile_s"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kilometerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/kilometer_s"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mileId" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/distanceConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kilometerAmount" />

    <EditText
        android:id="@+id/mileAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_miles"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/mileId"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <EditText
        android:id="@+id/kilometerAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_kilometers"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/kilometerId"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />
</androidx.constraintlayout.widget.ConstraintLayout>